update .gitignore and exploration notebook

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -798,6 +798,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fa2643f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting dotenv\n",
+      "  Downloading dotenv-0.9.9-py2.py3-none-any.whl.metadata (279 bytes)\n",
+      "Collecting python-dotenv (from dotenv)\n",
+      "  Downloading python_dotenv-1.1.1-py3-none-any.whl.metadata (24 kB)\n",
+      "Downloading dotenv-0.9.9-py2.py3-none-any.whl (1.9 kB)\n",
+      "Downloading python_dotenv-1.1.1-py3-none-any.whl (20 kB)\n",
+      "Installing collected packages: python-dotenv, dotenv\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [dotenv]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed dotenv-0.9.9 python-dotenv-1.1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install beautifulsoup4 pyyaml dotenv  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "219a53bc",
    "metadata": {},
    "outputs": [
@@ -822,6 +848,9 @@
     "\n",
     "from collections import defaultdict\n",
     "from bs4 import BeautifulSoup\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
     "\n",
     "session = requests.Session()\n",
     "session.headers.update({\n",
